# stsiv

./: .gitignore  README.md  entrypoint.sh  pyproject.toml
core/: config.py  (+1 more)
stsiv-api/: openapi.json  pyproject.toml
stsiv-api/api/: __init__.py
stsiv-api/api/v1/: __init__.py
stsiv-api/api/v1/experiments/: experiment.py
stsiv-api/api/v1/results/: result.py
stsiv-api/api/v1/users/: user.py
stsiv-api/api/v1/versions/: version.py
stsiv-api/app/dto/: __init__.py  test_result.py  user.py  version.py
stsiv-api/app/models/: test_result.py  user.py  version.py
stsiv-api/app/repositories/: __init__.py  test_repo.py  test_result_repo.py  user_repo.py
stsiv-api/app/schemas/: __init__.py  user.py
stsiv-api/app/schemas/request/: __init__.py  experiment.py  result.py  user.py  version.py
stsiv-api/app/schemas/response/: __init__.py  result.py  version.py
stsiv-api/app/services/: __init__.py  experiment_service.py  test_result_service.py  test_service.py  user_service.py  version_service.py
stsiv-api/app/services/argument_parser/: args_parsed.json  args_parser_extended.py
stsiv-api/app/services/subprocess_service/: subprocess_controller.py
stsiv-api/core/: config.py
stsiv-api/core/containers/: base_container.py
stsiv-api/core/database/: database.py  seeder.py
stsiv-api/core/database/seeds/: tests.json
stsiv-api/core/dependencies/: current_user.py
stsiv-api/core/logging/: logging_pretty.py
stsiv-api/core/repository/: abstract_repo.py  base_repo.py
stsiv-api/core/utils/: token_helper.py  url_builder.py
stsiv-api/scripts/: xoroshiro.py
(+119 files in other folders)
